Render game as grid to prevent layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,9 @@ html, body {
 }
 
 #app {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    place-content: center;
     height: 100%;
 }
 
